--- a/a学习笔记/学习笔记.md
+++ b/a学习笔记/学习笔记.md
@@ -39,4 +39,11 @@
 
      
 
-3. 
+3. 安装`husky`代码提交校验工具
+
+   * `npm i husky -D`
+
+   * `npm pkg set scripts.prepare="husky install"` 添加`package.josn`执行脚本
+   * `npm run prepare`
+   * `npx husky add .husky/pre-commit "npm run lint"` 添加钩子
+   * `npx husky add .husky/pre-commit "npm run format"`
