--- a/a学习笔记/学习笔记.md
+++ b/a学习笔记/学习笔记.md
@@ -44,6 +44,34 @@
    * `npm i husky -D`
 
    * `npm pkg set scripts.prepare="husky install"` 添加`package.josn`执行脚本
-   * `npm run prepare`
+   * `npx husky init`
    * `npx husky add .husky/pre-commit "npm run lint"` 添加钩子
    * `npx husky add .husky/pre-commit "npm run format"`
+
+4. 安装`commitlint` 提交信息校验工具库
+
+   * `npm install --save-dev @commitlint/config-conventional @commitlint/cli`
+
+   * 安装`husky` 
+
+   * 添加hook  `echo "npx --no -- commitlint --edit \$1" > .husky/commit-msg`
+
+     * 之后提交代码遇到控制台报错:
+
+       > commitlint + husky提示.husky/commit-msg: .husky/commit-msg: cannot execute binary
+
+       网上查到原因是因为echo命令创建的文件的编码是UTF-16LE，所以手动去.husky目录创建`commit-msg`文件就没问题。
+
+     ```
+     build: 影响构建系统或外部依赖项的更改，例如更新了构建配置或者脚本文件。
+     chore:添加了配置、辅助工具，不影响源代码 
+     ci: 持续集成配置文件的更改，例如对CI服务器配置的更新或脚本的修改。
+     docs: 文档文件的更改，例如更新了README、帮助文档或注释。
+     perf: 性能优化，表示这个提交提高了代码的性能。
+     refactor: 代码重构，表示对现有代码的结构进行了重构，但没有添加新功能或修复错误。
+     revert: 撤销之前的提交，表示这个提交是用来撤销之前的某个提交的。
+     *style: 代码风格更改，不影响代码逻辑的更改，比如格式化代码、缩进、空格等。
+     *test: 测试相关的更改，比如增加了测试用例或修正了测试脚本。
+     *feat: 新功能的添加，表示这是一个添加了新功能特性的提交。
+     *fix: 错误修复，表示这是一个修复了某个问题的提交。
+     ```
