feat: 学习css Module

--- a/a学习笔记/学习笔记.md
+++ b/a学习笔记/学习笔记.md
@@ -1,4 +1,4 @@
-# 环境初始化
+## 环境初始化
 
 设置淘宝镜像源:`npm config set registry https://registry.npmmirror.com`
 
@@ -75,3 +75,95 @@
      *feat: 新功能的添加，表示这是一个添加了新功能特性的提交。
      *fix: 错误修复，表示这是一个修复了某个问题的提交。
      ```
+
+## useState特性	
+
+- 任何state值更新都会触发 组件更新
+
+  所以如果页面(jsx)中未使用一个变量那么不要使用`useState()`造成性能浪费，推荐使用`useRef()`
+
+- count值为异步更新
+
+- 闭包陷阱吗，异步获取state的值可能不是最新的 
+
+- state是不可变的
+
+  ```react
+  //count不能直接修改值，要使用setCount()修改
+  const [count ,setCount] = useState([id:1,name:'xxx'])	
+  setCount(count.cantact({id:2,name:'ddd'}))
+  
+  //解决办法:安装immer
+  import produce from 'immer'
+  const [count ,setCount] = useState([id:1,name:'xxx'])
+  setCount(produce(data=>{
+      data.push({id:2,name:'ddd'})
+  }))
+  
+  ```
+
+- 会被合并执行
+
+  ```react
+  const [count ,setCount] = useState(1)	
+  
+  //只会执行一次
+  setCount(1)
+  setCount(1)
+  setCount(1)
+  setCount(1)
+  //解决办法：
+  //换成函数执行
+  setCount(count=>count+1)
+  setCount(count=>count+1)
+  setCount(count=>count+1)
+  
+  ```
+
+## useEffect
+
+- 当组件完成渲染的时候
+
+  **React18开始,useEffect会在开发环境执行俩次，目的是为了模拟组件创建、销毁、在创建的完整流程，及时暴露问题**
+
+  生产环境就只会执行一次
+
+- 当某个state值更新时候
+
+## 其他内置Hook
+
+### useRef
+
+```react
+//1.用于获取dom节点
+const iptRef = useRef(null)
+iptRef.current.select() //选中文本
+<input ref={iptRef} />
+//2.用于设置js变量，并且不会触发dom更新
+const data = useRef('1')
+data.current = 1
+
+```
+
+### useMemo
+
+函数组件，每次state更新都会重新执行函数组件，useMemo可以缓存数据。不用每次执行函数都重新生成，用于计算量较大的场景。
+
+类似于Vue的computed计算属性
+
+```react
+const [count1 ,setCount1] = useState(1)	
+const [count2 ,setCount2] = useState(1)	
+const sum = useMemo(()=>{
+    return count1 + count2
+},[count1,count2])
+```
+
+### useCallBack
+
+用法和useMemo一致
+
+ 
+
+
+
